			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: plld to honour -o with -c (when used as compiler frontend).

  * FIXED: Possible alignment issue when accessing read/write buffers using
    wchar_t.  Andreas Greve.

  * MODIFIED: Changed default stack-sizes to 16MB local and 32MB global
    and trail.  Should not affect anything, except applications creating
    many threads.  It is adviced to specify stack-sizes with thread_create/3
    in such applications.

  * FIXED: index/1 didn't clean hash-info.   Samer Abdallah.

  * FIXED: Bug#264: Typing.  Keri Harris.

  * PORT: patch to use libc's syscall(__NR_gettid).  Keri Harris.

  * FIXED: Bug#259: location indication in GUI tracer on Windows.

  * FIXED: Reporting stream-errors in non-Windows platforms.

  * FIXED: Some issues concerning integer rounding.  MODIFIED: arithmetic
    no longer silently converts floats to ints at some places.  Stricter
    compliance to the standard.  Richard O'Keefe.


==================================
VERSION 5.6.29 (February 26, 2007)
==================================

  * FIXED: Bug#258: set_prolog_IO/3 can trap assertion failure.  Keri
    Harris.

  * FIXED: Windows version of open(pipe(Command), ...).  Was leaking memory
    and handles.

  * FIXED: Possible stream lock underrun in at_end_of_stream/1 if there
    are errors.

  * FIXED: Possibly incorrect call to foreign cleanup handler after
    a signalled exception (timeout, thread_signal).

  * FIXED: Possible memory corruption in quick-load-file/saved-state
    handling.  Mike Elston.

  * FIXED: Possible assertion failure in pl-stream.c.  Jochem Liem.

  * FIXED: Stream re-positioning bug.  Mostly affects Windows, but
    also other systems when using variable-length multi-byte encoding